--- a/src/data/puzzles/manifest.json
+++ b/src/data/puzzles/manifest.json
@@ -6,7 +6,8 @@
       "difficulty": "easy",
       "category": "communication",
       "tags": ["validation", "contact"],
-      "file": "easy/digital-correspondence.json"
+      "file": "easy/digital-correspondence.json",
+      "summary": "Email validation - basic email format matching"
     },
     {
       "id": "easy-002",
@@ -14,7 +15,8 @@
       "difficulty": "easy",
       "category": "communication",
       "tags": ["format", "numbers"],
-      "file": "easy/voice-connection-format.json"
+      "file": "easy/voice-connection-format.json",
+      "summary": "US phone numbers - (123) 456-7890 format"
     },
     {
       "id": "easy-003",
@@ -22,7 +24,8 @@
       "difficulty": "easy",
       "category": "numbers",
       "tags": ["format", "decimal"],
-      "file": "easy/dotted-decimal-dance.json"
+      "file": "easy/dotted-decimal-dance.json",
+      "summary": "IP addresses - basic IPv4 validation"
     },
     {
       "id": "easy-004",
@@ -30,7 +33,8 @@
       "difficulty": "easy",
       "category": "logic",
       "tags": ["boolean", "simple"],
-      "file": "easy/binary-truth-seekers.json"
+      "file": "easy/binary-truth-seekers.json",
+      "summary": "Boolean values - matching true/false literals"
     },
     {
       "id": "medium-001",
@@ -38,7 +42,8 @@
       "difficulty": "medium",
       "category": "structure",
       "tags": ["syntax", "web"],
-      "file": "medium/markup-containers.json"
+      "file": "medium/markup-containers.json",
+      "summary": "HTML opening tags - simple tag name matching"
     },
     {
       "id": "medium-002",
@@ -46,7 +51,8 @@
       "difficulty": "medium",
       "category": "display",
       "tags": ["format", "visual"],
-      "file": "medium/visual-spectrum-codes.json"
+      "file": "medium/visual-spectrum-codes.json",
+      "summary": "Hex color codes - 3/6 digit hex validation"
     },
     {
       "id": "medium-003",
@@ -54,7 +60,8 @@
       "difficulty": "medium",
       "category": "time",
       "tags": ["date", "format"],
-      "file": "medium/temporal-sequence-cipher.json"
+      "file": "medium/temporal-sequence-cipher.json",
+      "summary": "Date formats - DD/MM/YYYY patterns"
     },
     {
       "id": "medium-004",
@@ -62,7 +69,8 @@
       "difficulty": "medium",
       "category": "navigation",
       "tags": ["path", "system"],
-      "file": "medium/slashed-path-wanderer.json"
+      "file": "medium/slashed-path-wanderer.json",
+      "summary": "File paths - Unix-style path validation"
     },
     {
       "id": "medium-005",
@@ -70,7 +78,8 @@
       "difficulty": "medium",
       "category": "identity",
       "tags": ["naming", "convention"],
-      "file": "medium/underscored-identity-crisis.json"
+      "file": "medium/underscored-identity-crisis.json",
+      "summary": "Variable names - underscore naming conventions"
     },
     {
       "id": "hard-001",
@@ -78,7 +87,8 @@
       "difficulty": "hard",
       "category": "security",
       "tags": ["validation", "complexity"],
-      "file": "hard/access-key-strength.json"
+      "file": "hard/access-key-strength.json",
+      "summary": "Password validation - complex requirements"
     },
     {
       "id": "hard-002",
@@ -86,7 +96,8 @@
       "difficulty": "hard",
       "category": "networking",
       "tags": ["format", "protocol"],
-      "file": "hard/network-node-addresses.json"
+      "file": "hard/network-node-addresses.json",
+      "summary": "MAC addresses - colon-separated hex pairs"
     },
     {
       "id": "hard-003",
@@ -94,7 +105,8 @@
       "difficulty": "hard",
       "category": "finance",
       "tags": ["payment", "validation"],
-      "file": "hard/credit-card-whisperer.json"
+      "file": "hard/credit-card-whisperer.json",
+      "summary": "Credit card numbers - various card formats"
     },
     {
       "id": "hard-004",
@@ -102,7 +114,8 @@
       "difficulty": "hard",
       "category": "text",
       "tags": ["sorting", "alpha"],
-      "file": "hard/alphabetic-soup-sorter.json"
+      "file": "hard/alphabetic-soup-sorter.json",
+      "summary": "Sorted strings - alphabetically ordered text"
     },
     {
       "id": "hard-005",
@@ -110,7 +123,8 @@
       "difficulty": "hard",
       "category": "versioning",
       "tags": ["semantic", "software"],
-      "file": "hard/version-number-archaeologist.json"
+      "file": "hard/version-number-archaeologist.json",
+      "summary": "Semantic versioning - x.y.z format"
     },
     {
       "id": "expert-001",
@@ -118,7 +132,8 @@
       "difficulty": "expert",
       "category": "data",
       "tags": ["format", "structure"],
-      "file": "expert/serialized-text-format.json"
+      "file": "expert/serialized-text-format.json",
+      "summary": "JSON-like structures - nested data patterns"
     },
     {
       "id": "expert-002",
@@ -126,7 +141,8 @@
       "difficulty": "expert",
       "category": "structure",
       "tags": ["recursive", "balance"],
-      "file": "expert/nested-parentheses-zen-master.json"
+      "file": "expert/nested-parentheses-zen-master.json",
+      "summary": "Balanced parentheses - recursive matching"
     },
     {
       "id": "expert-003",
@@ -134,7 +150,8 @@
       "difficulty": "expert",
       "category": "protocols",
       "tags": ["rfc", "complex"],
-      "file": "expert/email-header-archaeologist.json"
+      "file": "expert/email-header-archaeologist.json",
+      "summary": "RFC email headers - complex email parsing"
     },
     {
       "id": "expert-004",
@@ -142,7 +159,8 @@
       "difficulty": "expert",
       "category": "mathematics",
       "tags": ["algebra", "parsing"],
-      "file": "expert/mathematical-expression-oracle.json"
+      "file": "expert/mathematical-expression-oracle.json",
+      "summary": "Math expressions - algebraic notation"
     },
     {
       "id": "nightmare-001",
@@ -150,7 +168,8 @@
       "difficulty": "nightmare",
       "category": "meta",
       "tags": ["recursive", "impossible"],
-      "file": "nightmare/recursive-nightmare.json"
+      "file": "nightmare/recursive-nightmare.json",
+      "summary": "Meta-recursive patterns - self-referential regex"
     },
     {
       "id": "nightmare-002",
@@ -158,7 +177,8 @@
       "difficulty": "nightmare",
       "category": "invisible",
       "tags": ["whitespace", "hidden"],
-      "file": "nightmare/whitespace-phantom.json"
+      "file": "nightmare/whitespace-phantom.json",
+      "summary": "Invisible characters - whitespace edge cases"
     }
   ],
   "categories": [
