--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@tanstack/react-router": "^1.129.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
