--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "validate:puzzles": "vitest run src/tests/validation-report.test.ts"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@tanstack/react-router": "^1.129.8",
