--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:run": "vitest run",
+    "test:stores": "vitest run --config vitest.config.stores.ts",
+    "test:stores:watch": "vitest --config vitest.config.stores.ts",
     "test:puzzles": "vitest run src/tests/puzzle-validation.test.ts",
     "validate:puzzles": "vitest run src/tests/validation-report.test.ts",
     "predeploy": "npm run build",
@@ -43,6 +45,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
+    "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
